# rhymera

./: README.md  book_output.json  content.py  exampleimagen.py  imagegen.py  main.py  pyproject.toml
app/auth/: config.py  database.py  models.py  utils.py
app/books/: crud.py  images.py  models.py  pdf.py
frontend/: next.config.js  next.config.ts  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/auth/[...nextauth]/: route.ts
frontend/src/app/api/books/[id]/: route.ts
frontend/src/app/books/[id]/: page.tsx
frontend/src/app/create-book/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/dashboard/[bookId]/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/: BookViewer.tsx  Providers.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: auth.ts
frontend/src/types/: book.ts  index.ts  next-auth.d.ts
frontend/src/utils/: api.ts
