[tool.poetry]
name = "rhymera"
version = "0.1.0"
description = ""
authors = ["Occupying-Mars <krishnapg2315@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
google-genai = "^1.8.0"
dotenv = "^0.9.9"
google = "^3.0.0"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"
python-jose = {extras = ["cryptography"], version = "^3.4.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.20"
pymongo = {extras = ["srv"], version = "^4.11.3"}
pydantic-settings = "^2.8.1"
pydantic = {extras = ["email"], version = "^2.10.6"}
google-auth = "^2.38.0"
reportlab = "^4.3.1"
google-generativeai = "^0.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
